--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -42,15 +42,15 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
 
-    implementation "com.google.dagger:hilt-android:2.42"
+    implementation 'com.google.dagger:hilt-android:2.43'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
-    kapt "com.google.dagger:hilt-android-compiler:2.42"
+    kapt 'com.google.dagger:hilt-android-compiler:2.43'
 
     implementation 'androidx.activity:activity-ktx:1.5.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
