--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FridgeRescuer">
+        <activity android:name=".views.mypage.MypageActivity"/>
+        <activity android:name=".views.location.LocationActivity"/>
+        <activity android:name=".views.myfridge.MyfridgeActivity"/>
+        <activity android:name=".views.recipe.RecipeActivity"/>
         <activity
             android:name=".views.MainActivity"
             android:exported="true"
