--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,8 +43,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
 
     implementation 'com.google.dagger:hilt-android:2.43'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.43'
 
     implementation 'androidx.activity:activity-ktx:1.5.1'
