--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/Theme.FridgeRescuer">
         <activity android:name=".views.mypage.MypageActivity"/>
         <activity android:name=".views.location.LocationActivity"/>
+        <activity android:name=".views.search.SearchActivity"/>
         <activity android:name=".views.myfridge.MyfridgeActivity"/>
         <activity android:name=".views.recipe.RecipeActivity"/>
         <activity
