--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,20 +33,28 @@ android {
 
 dependencies {
 
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.43"
+    kapt "com.google.dagger:hilt-android-compiler:2.43"
+
+    //rxjava
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+
+    // Room library
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-testing:2.4.3"
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // Room library
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
-    implementation "androidx.room:room-ktx:2.4.3"
-
-    // Test
-    implementation "androidx.room:room-testing:2.4.3"
 
     implementation project(':domain')
 }
