--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,14 +40,19 @@ dependencies {
     //rxjava
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+    implementation "androidx.room:room-rxjava3:2.4.3"
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
-    // Room library
+    // room library
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
     implementation "androidx.room:room-testing:2.4.3"
+
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
