--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     //hilt
     implementation 'com.google.dagger:hilt-android:2.43'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.43'
 
     //navigation
@@ -51,7 +52,6 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     //room
     implementation "androidx.room:room-runtime:2.4.3"
