Feat: Retrofit, 자동완성 관련 getIngrList 로직 추가
- data의 ApiClient, ApiInterface
- presentation di의 ApiModule 추가
- okhttp3 logging interceptor, retrofit rxjava adapter, orhanobut logger 종속성 추가
- 자동완성 관련 presentation에 IngrSearchAdapter 추가 및 AddIngr view와 viewmodel 업데이트
- 자동완성 관련 domain에 GetIngrUseCase와 SearchRepository 추가
- 자동완성 관련 data에 ingrlist 가져오는 로직과 presentation에 di 추가

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -51,13 +51,22 @@ dependencies {
     //rxjava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
-    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'androidx.room:room-rxjava3:2.4.3'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     //room
     implementation "androidx.room:room-runtime:2.4.3"
 
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
     //skeleton UI
     implementation "com.facebook.shimmer:shimmer:0.5.0"
+
+    implementation 'com.orhanobut:logger:2.2.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
